--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,9 @@ dependencies = [
     "fastapi (>=0.116.2,<0.117.0)",
     "uvicorn (>=0.35.0,<0.36.0)",
     "sse-starlette (>=3.0.2,<4.0.0)",
-    "langsmith (>=0.4.29,<0.5.0)"
+    "langsmith (>=0.4.29,<0.5.0)",
+    "pypdf (>=4.2.0,<5.0.0)",
+    "langchain-upstage (>=0.7.3,<0.8.0)"
 ]
 
 [tool.poetry]
