--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ dependencies = [
     "sse-starlette (>=3.0.2,<4.0.0)",
     "langsmith (>=0.4.29,<0.5.0)",
     "pypdf (>=4.2.0,<5.0.0)",
-    "langchain-upstage (>=0.7.3,<0.8.0)"
+    "langchain-upstage (>=0.7.3,<0.8.0)",
+    "langchain-google-genai (>=2.1.12,<3.0.0)"
 ]
 
 [tool.poetry]
