--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ dependencies = [
     "faiss-cpu (>=1.12.0,<2.0.0)",
     "scikit-learn (>=1.7.2,<2.0.0)",
     "sentence-transformers (>=5.1.1,<6.0.0)",
-    "langchain-huggingface (>=0.3.1,<0.4.0)"
+    "langchain-huggingface (>=0.3.1,<0.4.0)",
+    "docx2txt (>=0.9,<0.10)"
 ]
 
 [tool.poetry]
