--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ dependencies = [
     "scikit-learn (>=1.7.2,<2.0.0)",
     "sentence-transformers (>=5.1.1,<6.0.0)",
     "langchain-huggingface (>=0.3.1,<0.4.0)",
-    "docx2txt (>=0.9,<0.10)"
+    "docx2txt (>=0.9,<0.10)",
+    "beautifulsoup4 (>=4.13.5,<5.0.0)"
 ]
 
 [tool.poetry]
