--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ dependencies = [
     "langchain-huggingface (>=0.3.1,<0.4.0)",
     "docx2txt (>=0.9,<0.10)",
     "beautifulsoup4 (>=4.13.5,<5.0.0)",
-    "gradio-pdf (>=0.0.22,<0.0.23)"
+    "gradio-pdf (>=0.0.22,<0.0.23)",
+    "wikipedia (>=1.4.0,<2.0.0)"
 ]
 
 [tool.poetry]
